[package]
name = "linfa-random_forest"
version = "0.6.1"
edition = "2018"
authors = ["NO"]
description = "A collection of random forest algorithm"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["machine-learning", "linfa", "random_forest", "supervised"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
serde = ["serde_crate", "ndarray/serde"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
ndarray = { version = "0.15" , features = ["rayon", "approx"]}
ndarray-rand = "0.14"
linfa-trees = { version = "0.6.1", path = "../linfa-trees" }
linfa = { version = "0.6.1", path = "../.." }


[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
criterion = "0.4.0"
approx = "0.4"
linfa-datasets = { version = "0.6.1", path = "../../datasets/", features = ["iris"] }
